# binance-klines

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
binance_downloader/: cli.py  constants.py  downloader.py  settings.py  utils.py
binance_klines/: cli.py  downloader.py
tests/: test_downloader.py
tests/fixtures/: klines.py
