[tool.poetry]
name = "binance-klines"
version = "0.1.0"
description = "BinanceKlines - A tool to download OHLCV candlestick data (K-Lines) from Binance. Written in Python."
authors = ["Pierpaolo Pantone <24alsecondo@gmail.com>"]
readme = "README.md"
packages = [{include = "binance_klines"}]

[tool.poetry.dependencies]
python = "^3.10"
ccxt = "^3.0.61"
pytz = "^2023.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ipdb = "^0.13.13"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
tox = "^4.4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 99

[tool.isort]
profile = "black"

[tool.poetry.scripts]
binance-klines = "binance_klines.cli:main"
